--- a/discord-clone/index.html
+++ b/discord-clone/index.html
@@ -1,8 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link class="page-icon" href="src/assets/discord-logo.svg" type="image/svg">
+    <link
+      class="page-icon"
+      href="src/assets/discord-logo.svg"
+      type="image/svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Discord</title>
   </head>
